--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,6 @@ language: java
 matrix:
  include:
   - os: linux
-    jdk: oraclejdk8
-  - os: linux
     jdk: oraclejdk9
   - os: linux
     jdk: openjdk8
@@ -45,7 +43,7 @@ deploy:
     local-dir: target/site
     on:
       branch: master
-      condition: $TRAVIS_JDK_VERSION = oraclejdk8
+      condition: $TRAVIS_JDK_VERSION = openjdk8
   - provider: releases
     api_key: $GITHUB_TOKEN
     file_glob: true
@@ -57,7 +55,7 @@ deploy:
     on:
       branch: master
       tags: false
-      condition: $TRAVIS_JDK_VERSION = oraclejdk8
+      condition: $TRAVIS_JDK_VERSION = openjdk8
   - provider: releases
     api_key: $GITHUB_TOKEN
     file_glob: true
@@ -68,4 +66,4 @@ deploy:
     body: "$RELEASE_NOTES"
     on:
       tags: true
-      condition: $TRAVIS_JDK_VERSION = oraclejdk8 && "$TRAVIS_TAG" =~ powerunit-extensions-matchers-[0-9].[0-9].[0-9]
+      condition: $TRAVIS_JDK_VERSION = openjdk8 && "$TRAVIS_TAG" =~ powerunit-extensions-matchers-[0-9].[0-9].[0-9]
