--- a/pom.xml
+++ b/pom.xml
@@ -366,7 +366,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<excludePackageNames>ch.powerunit.extensions.matchers.factoryprocessor*:ch.powerunit.extensions.matchers.provideprocessor*:ch.powerunit.extensions.matchers.common*</excludePackageNames>
+					<excludePackageNames>ch.powerunit.extensions.matchers.provideprocessor:ch.powerunit.extensions.matchers.common:ch.powerunit.extensions.matchers.provideprocessor*:ch.powerunit.extensions.matchers.common*</excludePackageNames>
 					<docfilessubdirs>true</docfilessubdirs>
 					<linksource>false</linksource>
 					<detectLinks />
@@ -635,7 +635,7 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>3.2.0</version>
 				<configuration>
-					<excludePackageNames>ch.powerunit.extensions.matchers.factoryprocessor*:ch.powerunit.extensions.matchers.provideprocessor*:ch.powerunit.extensions.matchers.common*</excludePackageNames>
+					<excludePackageNames>ch.powerunit.extensions.matchers.provideprocessor:ch.powerunit.extensions.matchers.common:ch.powerunit.extensions.matchers.provideprocessor*:ch.powerunit.extensions.matchers.common*</excludePackageNames>
 					<docfilessubdirs>true</docfilessubdirs>
 					<linksource>true</linksource>
 					<detectLinks />
