--- a/.travis.yml
+++ b/.travis.yml
@@ -75,3 +75,9 @@ deploy:
     on:
       tags: true
       condition: $TRAVIS_JDK_VERSION = openjdk8 && "$TRAVIS_TAG" =~ powerunit-extensions-matchers-[0-9].[0-9].[0-9]
+
+cache:
+ directories:
+  - $HOME/.m2/repository
+before_cache:
+ - rm -rf $HOME/.m2/repository/ch/powerunit
