--- a/src/it/multimodule-nogeneric-it-jdk8/children/pom.xml
+++ b/src/it/multimodule-nogeneric-it-jdk8/children/pom.xml
@@ -69,5 +69,10 @@
 			<artifactId>powerunit-extensions-matchers-multimodule-parent-it1000</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>ch.powerunit.extensions</groupId>
+			<artifactId>powerunit-extensions-matchers-multimodule-parent-old-it1000</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 </project>
