--- a/src/it/multimodule-nogeneric-it-jdk9+/children/pom.xml
+++ b/src/it/multimodule-nogeneric-it-jdk9+/children/pom.xml
@@ -70,6 +70,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>ch.powerunit.extensions</groupId>
+			<artifactId>powerunit-extensions-matchers-multimodule-parent-old-it1000</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>javax.annotation</groupId>
 			<artifactId>javax.annotation-api</artifactId>
 			<version>1.3.2</version>
