--- a/pom.xml
+++ b/pom.xml
@@ -276,6 +276,9 @@
 			                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
 			                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
 			            </manifest>
+			            <manifestEntries>
+			            	<Multi-Release>true</Multi-Release>
+			            </manifestEntries>
 			        </archive>
 			    </configuration>
 			</plugin>
