--- a/src/it/archetype-it-jdk8/params.properties
+++ b/src/it/archetype-it-jdk8/params.properties
@@ -1,2 +1,2 @@
-invoker.java.version=1.8,!9,!10,!11
+invoker.java.version=1.8,!9,!10,!11,!12,!13,!14,!15,!16,!17,!18,!19,!21,!22,!23,!24
 invoker.goals=org.apache.maven.plugins:maven-archetype-plugin:generate -DgroupId=ch.test -DartifactId=testme1 -Dversion=1.0-SNAPSHOT -Dpackage=ch.test.testme -DarchetypeCatalog=local
