--- a/src/it/multimodule-nogeneric-it-jdk8/params.properties
+++ b/src/it/multimodule-nogeneric-it-jdk8/params.properties
@@ -1,2 +1,2 @@
-invoker.java.version=1.8,!9,!10,!11
+invoker.java.version=1.8,!9,!10,!11,!12,!13,!14,!15,!16,!17,!18,!19,!21,!22,!23,!24
 invoker.goals=clean install 
